--- a/404.html
+++ b/404.html
@@ -225,7 +225,10 @@
     </head>
     <body>
 
-    <div class="container m-p">    
+    <div class="container m-p" style="
+    margin-left: 40%;
+    margin-top: 10%;
+">
         <div id="checkbox-window" class="checkbox-window m-p block">
             <div class="checkbox-container m-p">
                 <button type="button" id="checkbox" class="checkbox m-p line-normal"></button>
